<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.PlaylistActivity">
    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_text"
        />

    <Button
        android:id="@+id/playlist_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_buy"/>
    <Button
        android:id="@+id/playlist_now_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"/>
    <Button
        android:id="@+id/playlist_song_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_detail"/>

</LinearLayout>
