<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.MusicStoreActivity">
    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_text"
        />

    <Button
        android:id="@+id/store_song_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_detail"/>
    <Button
        android:id="@+id/store_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlist"/>
</LinearLayout>
